--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "commit": "cz"
   },
   "dependencies": {
     "@next/font": "13.1.1",
@@ -22,7 +23,13 @@
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.48.1",
+    "cz-conventional-changelog": "^3.3.0",
     "eslint-config-prettier": "^8.6.0",
     "prettier": "^2.8.2"
+  },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    }
   }
 }
